deploy/k8s/dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pulsewatch
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/audit: restricted
