deploy/k8s/dev/60-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: pulsewatch
spec:
  replicas: 1
  selector: { matchLabels: { app: web } }
  template:
    metadata: { labels: { app: web } }
    spec:
      containers:
        - name: web
          image: pulsewatch-web:prod
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80 
          readinessProbe:
            httpGet: { path: "/", port: 80  }
            initialDelaySeconds: 3
          livenessProbe:
            httpGet: { path: "/", port: 80 }
            initialDelaySeconds: 10
