deploy/k8s/dev/12-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: pulsewatch
spec:
  selector:
    app: postgres
  ports:
    - name: psql
      port: 5432
      targetPort: 5432
  type: ClusterIP
