deploy/k8s/dev/21-redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: pulsewatch
spec:
  selector: { app: redis }
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  type: ClusterIP
